<resources>
    <string name="app_name">PsyHealthApp</string>
    <string name="onboarding_welcome_string">Привет!\nПеред тем как начать, нам нужно кое-что узнать о тебе</string>
    <string name="onboarding_continue_text">Продолжить</string>
    <string name="onboarding_data_title">Расскажи нам о себе</string>
    <string name="onboarding_data_name_title">Имя</string>
    <string name="onboarding_data_age_title">Возраст (лет)</string>
    <string name="onboarding_data_email_title">Электронная почта</string>
    <string name="onboarding_data_email_disclaimer">Мы не используем email для спама</string>
    <string name="onboarding_data_error_toast">Проверьте данные</string>
    <string name="history_add_title">Расскажите нам, как вы себя чувствуете в последнее время</string>
    <string name="history_add_disclaimer">Затем вы сможете проследить, как изменялось ваше самочувствие с течением времени</string>
    <string name="history_add_hint">Несколько предложений или просто пару слов</string>
    <string name="history_add_cancel_disclaimer">Мы сохраним черновик</string>
    <string name="history_add_continue_text">Сохранить</string>
    <string name="history_add_cancel_text">Назад</string>
    <string name="history_add_error_text">Текст не может быть пустым</string>
    <string name="history_show_add_button_text">Добавить</string>
    <string name="tapping_test_bottom_menu_name">Таппинг тест</string>
    <string name="profile_bottom_menu_name">Профиль</string>
    <string name="histories_bottom_menu">Истории</string>

    <string name="profile_hint_how_edit_image">Чтобы поменять аватарку, нажми на неё.</string>
    <string name="profile_sex_man">мужской</string>
    <string name="profile_sex_woman">женский</string>
    <string name="profile_sex_other">другое</string>
    <string name="profile_no_info">не указано</string>

    <string name="test_reaction_wait_green_button">Ждите зеленой кнопки.</string>
    <string name="test_reaction_soon_tap">Слишком рано! Попробуйте снова.</string>
    <string name="test_reaction_smth_wrong">Что-то пошло не так! Попробуйте снова.</string>
    <string name="test_reaction_tap_green_button">Клик!</string>
    <string name="complex_test_reaction_wait_for_choice">Ждите.</string>
    <string name="complex_test_reaction_soon_tap">Слишком рано! Попробуйте снова.</string>
    <string name="complex_test_reaction_wrong_button_pressed">"Не та кнопка! Попробуйте снова."</string>
    <string name="complex_test_reaction_smth_wrong">Что-то пошло не так! Попробуйте снова.</string>
    <string name="complex_test_reaction_press_green_button">Зеленую!</string>
    <string name="complex_test_reaction_press_red_button">Красную!</string>
    <string name="moving_object_reaction_test_start_test">Нажмите чтобы начать.</string>
    <string name="moving_object_reaction_test_move_on">Нажмите чтобы продолжить.</string>
    <string name="moving_object_reaction_test_tap_to_proceed">"Нажмите чтобы попробовать снова."</string>
    <string name="moving_object_reaction_test_stop_circle">Стоп.</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistic_header">Статистика</string>
    <string name="passed_tests"> МОИ ТЕСТЫ </string>
    <string name="in_recent_days"> график за последние дни: </string>
    <string name="reaction_test"> РЕАКЦИЯ </string>
    <string name="state"> СОСТОЯНИЕ </string>
    <string name="over_all_attempts"> по всем прохождениям: </string>
    <string name="tapping_test"> ТЕППИНГ ТЕСТ </string>
    <string name="last_result"> последний результат:&#160; </string>
    <string name="type_of_nervous_system"> тип нервной системы: </string>
    <string name="medium"> &#160;средний </string>
    <string name="recent_attempts"> последние попытки: </string>

    <string name="tests"> тесты </string>
    <string name="relax"> расслабление </string>
    <string name="training"> тренировка </string>
    <string name="on_average"> в среднем: </string>
    <string name="min"> лучший:  </string>
    <string name="in_total"> за все время: </string>
    <string name="up_this_week"> на этой неделе: </string>
    <string name="asymmetry_ratio"> коэффициент асимметрии: </string>
    <string name="nervous_system_power"> сила нервной системы: </string>
    <string name="total_clicks"> нажатий всего: </string>

    <string name="summary_placeholder_text"> Мы еще не собрали необходимые данные,\nпопробуйте пройти больше тестов! </string>
    <string name="reaction_placeholder_text"> Вы еще не попробовали это.\nМожет, сейчас самое время? </string>
    <string name="lastdaycacitivy_placeholder_text"> Вы еще не проходили тестов.\nНаш оракул говорит, что уже пора! </string>
    <string name="tapping_placeholder_text"> Попробуйте пройти этот тест,\nон работает! </string>

    <string name="settings_color_changer">Изменение цвета фона</string>
    <string name="settings_about_title">О нас</string>
    <string name="settings_about_text">
    <b>Github: mbnexttime/health_app</b>\n
    mbnexttime \n
    AndreyYurko \n
    MashaK5 \n
    Arrias \n
    Gor1x</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="settings_color_changer">Изменение цвета фона</string>
    <string name="settings_about_title">О нас</string>
    <string name="settings_about_text">
    <b>Github: mbnexttime/health_app</b>\n\n
    mbnexttime \n
    AndreyYurko \n
    MashaK5 \n
    Arrias \n
    Gor1x</string>

</resources>