<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/history_add_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/history_add_scroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@id/history_add_cancel_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/history_add_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/history_add_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/history_add_view_left_margin"
                android:layout_marginTop="32dp"
                android:text="@string/history_add_title"
                android:textColor="@color/dark_blue"
                android:textSize="16dp" />

            <EditText
                android:id="@+id/history_add_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/history_add_view_left_margin"
                android:layout_marginTop="4dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/history_add_edit_text_background"
                android:gravity="left|top"
                android:hint="@string/history_add_hint"
                android:inputType="textMultiLine"
                android:minHeight="160dp"
                android:padding="8dp"
                android:textColorHint="@color/dark_grey"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/history_add_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/history_add_view_left_margin"
                android:layout_marginTop="4dp"
                android:text="@string/history_add_disclaimer"
                android:textColor="@color/dark_grey"
                android:textSize="12dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/history_add_cancel_button"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/history_add_cancel_text"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@id/history_add_cancel_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/history_add_cancel_disclaimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/history_add_cancel_disclaimer"
        android:textColor="@color/dark_grey"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@id/history_add_continue_button"
        app:layout_constraintLeft_toLeftOf="@id/history_add_cancel_button" />

    <Button
        android:id="@+id/history_add_continue_button"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/history_add_continue_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>