<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E5DADD"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/stat_header_height"
            android:text="@string/statistic_header"
            android:textSize="@dimen/stat_header_textSize"
            android:textColor="@color/black"
            android:layout_gravity="center"
            >
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/test_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tests"
                android:textAlignment="center"
                android:textSize="@dimen/stat_navButtons_textSize"
                app:cornerRadius="@dimen/stat_navButtons_cornerRadius"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/relax_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relax"
                app:cornerRadius="@dimen/stat_navButtons_cornerRadius"
                android:textSize="@dimen/stat_navButtons_textSize"
                android:layout_weight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/train_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/training"
                app:cornerRadius="@dimen/stat_navButtons_cornerRadius"
                android:textSize="@dimen/stat_navButtons_textSize"
                android:layout_weight="1"
                />

        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>