<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/stat_marginVertical"
    app:cardBackgroundColor="@color/stat_cardBackground"
    app:cardCornerRadius="@dimen/stat_cardCornerRadius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/stat_marginVertical"
            android:fontFamily="@font/neuton"
            android:text="@string/last_result" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/stat_marginVertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/type_of_nervous_system"
                android:textColor="@color/stat_tests_tapping_textColor_2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type_of_nervous_system"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textColor="@color/stat_tests_tapping_textColor_1"
                android:textStyle="bold" />
        </LinearLayout>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/stat_marginVertical"
            android:minHeight="@dimen/stat_minChartHeight" />
    </LinearLayout>

</androidx.cardview.widget.CardView>

