<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/onboarding_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboarding_data_view_left_margin"
        android:layout_marginTop="100dp"
        android:text="@string/onboarding_data_title"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/onboarding_data_name_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboarding_data_view_left_margin"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_data_title">

        <TextView
            android:id="@+id/onboarding_data_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_data_name_title"
            android:textColor="@color/dark_blue"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/onboarding_data_name_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/onboarding_data_edit_text_background"
            android:gravity="left|center_vertical"
            android:inputType="textPersonName"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/onboarding_data_age_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboarding_data_view_left_margin"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_data_name_container">

        <TextView
            android:id="@+id/onboarding_data_age_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_data_age_title"
            android:textColor="@color/dark_blue"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/onboarding_data_age_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/onboarding_data_edit_text_background"
            android:gravity="left|center_vertical"
            android:inputType="number"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/onboarding_data_email_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboarding_data_view_left_margin"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_data_age_container">

        <TextView
            android:id="@+id/onboarding_data_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_data_email_title"
            android:textColor="@color/dark_blue"
            android:textSize="12dp" />

        <EditText
            android:id="@+id/onboarding_data_email_edit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/onboarding_data_edit_text_background"
            android:gravity="left|center_vertical"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="4dp"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/onboarding_data_email_disclaimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/onboarding_data_email_disclaimer"
            android:textColor="@color/dark_grey"
            android:textSize="12dp" />
    </LinearLayout>

    <Button
        android:id="@+id/onboarding_data_continue_button"
        android:layout_width="240dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/onboarding_continue_button_background"
        android:gravity="center"
        android:text="@string/onboarding_continue_text"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>